# COSC490-Project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  OctreePC.cpp  OctreePC.h  PointCloud.cpp  PointCloud.h  README.md  UniformPC.cpp  UniformPC.h  VectorPC.cpp  VectorPC.h  parallelNotes.txt  planeFinder.cpp
